# shared/api/bundles/order.openapi.v1.bundle.yaml
@@ -496,21 +496,15 @@ components:
           description: Описание ошибки
           example: 'Service Unavailable: Service is unavailable'
     payment_method:
-      type: integer
+      type: string
       description: Способ оплаты
       enum:
-        - 0
-        - 1
-        - 2
-        - 3
-        - 4
-      example: 1
-      x-enum-descriptions:
-        '0': UNKNOWN
-        '1': CARD
-        '2': SBP
-        '3': CREDIT_CARD
-        '4': INVESTOR_MONEY
+        - UNKNOWN
+        - CARD
+        - SBP
+        - CREDIT_CARD
+        - INVESTOR_MONEY
+      example: CARD
     pay_order_request:
       type: object
       required:
